# volesti-lab

./: .gitignore  README.md
Rvolesti/: README.md
design-docs/: replacement-strategy.md
logs/: day1-build.md  day1-summary.md
proposal/final/: README.md
tests/easy/: cpp_output.txt  easy-test.md  r_output.txt  run_inner_ball.R
volesti/examples/bsb_sampling/: CMakeLists.txt  README.md  billiardshakeandbake.cpp
volesti/examples/hpolytope-volume/: README.md
volesti/examples/sb_sampling/: README.md
volesti/examples/sparse_billiard/: CMakeLists.txt  sparse_billiard_walk_benchmark.cpp
volesti/include/convex_bodies/: hpolytope.h  vpolyintersectvpoly.h  vpolytope.h  zonoIntersecthpoly.h  zpolytope.h
volesti/include/generators/: boost_random_number_generator.hpp
volesti/include/ode_solvers/: runge_kutta.hpp
volesti/include/random_walks/: billiard_shake_and_bake_walk.hpp  random_walks.hpp  shake_and_bake_walk.hpp  sparse_uniform_billiard_walk.hpp
volesti/include/sampling/: random_point_generators.hpp  sampling.hpp  sphere.hpp
volesti/test/: CMakeLists.txt  billiard_shake_and_bake_test.cpp  crhmc_sampling_test.cpp
